53 docs: add Gradle install snippets (#93)
* 53 docs: add Gradle install snippets

* 53 docs: fix Gradle Groovy JVM args